# POC_Object_Detection

./: .gitignore  README.md  annotate.py  augment.py  dataset.yaml  detect.py  pyproject.toml  train.py  walkthrough.ipynb
annotations/: 0b7a5890-WIN_20260421_13_39_32_Pro.txt  0e388cfa-WIN_20260421_13_44_04_Pro.txt  15b1bd8e-WIN_20260421_13_40_49_Pro.txt  21f39a15-WIN_20260421_13_40_27_Pro.txt  2403a860-WIN_20260421_13_40_15_Pro.txt  252c9885-WIN_20260421_13_41_28_Pro.txt  2fc784a2-WIN_20260421_13_39_15_Pro.txt  30e22803-WIN_20260421_13_40_21_Pro.txt  33ce8373-WIN_20260421_13_38_44_Pro.txt  392ab614-WIN_20260421_13_42_46_Pro.txt  4162c14a-WIN_20260421_13_38_11_Pro.txt  4347a115-WIN_20260421_13_41_02_Pro.txt  44435935-WIN_20260421_13_43_54_Pro.txt  49bc6793-WIN_20260421_13_43_07_Pro.txt  4d4357f5-WIN_20260421_13_39_22_Pro.txt  4ff56e64-WIN_20260421_13_43_13_Pro.txt  522abc30-WIN_20260421_13_38_31_Pro.txt  539edf94-WIN_20260421_13_40_07_Pro.txt  5a36a80e-WIN_20260421_13_40_56_Pro.txt  5d35bd35-WIN_20260421_13_38_05_Pro.txt  5e7341df-WIN_20260421_13_43_46_Pro.txt  62cde125-WIN_20260421_13_44_10_Pro.txt  6563ef79-WIN_20260421_13_41_57_Pro.txt  683c945a-WIN_20260421_13_43_39_Pro.txt  68dfa430-WIN_20260421_13_42_16_Pro.txt  7e4057d9-WIN_20260421_13_38_38_Pro.txt  88226194-WIN_20260421_13_38_52_Pro.txt  88646067-WIN_20260421_13_39_49_Pro.txt  9ab19089-WIN_20260421_13_41_10_Pro.txt  9cd36fde-WIN_20260421_13_40_44_Pro.txt  a9a6e345-WIN_20260421_13_38_24_Pro.txt  adc85af5-WIN_20260421_13_40_00_Pro.txt  b7e0909c-WIN_20260421_13_42_25_Pro.txt  b90f7291-WIN_20260421_13_42_52_Pro.txt  (+14 more)
(+14 files in other folders)
