[project]
name = "poc-picking-object-v2"
version = "0.1.0"
description = "POC: Bowl detection and rack grid localization using YOLOv8"
requires-python = ">=3.10, <3.14"
dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=9.5.0",
    "albumentations>=1.3.0",
    "pyyaml>=6.0",
    "label-studio>=1.0.0",
]

[tool.uv]
dev-dependencies = []
